# Adhoc

./: .gitignore  .gitmodules
adhoc/: pyproject.toml
llming/: README.md  pyproject.toml  trials.ipynb
