[tool.poetry]
name = "adhoc"
version = "0.1.0"
description = ""
authors = ["tekritesh <ritesh.tekriwal03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.1"
torchvision = "0.15.2"
opencv-python = "4.7.0.72"
absl-py = "1.4.0"
antlr4-python3-runtime = "4.9.3"
black = "23.3.0"
cachetools = "5.3.1"
certifi = "2023.5.7"
charset-normalizer = "3.1.0"
click = "8.1.3"
cloudpickle = "2.2.1"
contourpy = "1.1.0"
cycler = "0.11.0"
filelock = "3.12.2"
fonttools = "4.40.0"
fvcore = "0.1.5.post20221221"
google-auth = "2.20.0"
google-auth-oauthlib = "1.0.0"
grpcio = "1.54.2"
hydra-core = "1.3.2"
idna = "3.4"
iopath = "0.1.9"
jinja2 = "3.1.2"
kiwisolver = "1.4.4"
markdown = "3.4.3"
markupsafe = "2.1.3"
matplotlib = "3.7.1"
mpmath = "1.3.0"
mypy-extensions = "1.0.0"
networkx = "3.1"
numpy = "1.24.3"
oauthlib = "3.2.2"
omegaconf = "2.3.0"
packaging = "23.1"
pathspec = "0.11.1"
pillow = "9.5.0"
platformdirs = "3.5.3"
portalocker = "2.7.0"
protobuf = "4.23.3"
pyasn1 = "0.5.0"
pyasn1-modules = "0.3.0"
pyparsing = "3.0.9"
python-dateutil = "2.8.2"
pyyaml = "6.0"
requests = "2.31.0"
requests-oauthlib = "1.3.1"
rsa = "4.9"
six = "1.16.0"
sympy = "1.12"
tabulate = "0.9.0"
tensorboard = "2.13.0"
tensorboard-data-server = "0.7.1"
termcolor = "2.3.0"
tomli = "2.0.1"
tqdm = "4.65.0"
typing-extensions = "4.6.3"
urllib3 = "1.26.16"
werkzeug = "2.3.6"
yacs = "0.1.8"
cython = "^0.29.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
