[tool.poetry]
name = "llming"
version = "0.1.0"
description = ""
authors = ["tekritesh <ritesh.tekriwal03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.0"
bs4 = "^0.0.1"
python-dotenv = "^1.0.0"
pypdf = "^3.15.4"
pdf2image = "^1.16.3"
pdfminer = "^20191125"
llvmlite = "^0.40.1"
langchain = {extras = ["llms"], version = "^0.0.228"}
privategpt = {path = "privategpt", develop = true}
tensorboardx = "^2.6.2.2"
absl-py = "^1.4.0"
gast = "^0.5.4"
astunparse = "^1.6.3"
opt-einsum = "^3.3.0"
sentence-transformers = "^2.2.2"
hnswlib = {version = "^0.7.0", platform = "arm64"}
pandas = "2.0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
